# libMusDoom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: musdoom-config.cmake.in
examples/: CMakeLists.txt  musdoom_player.c  simple_test.c
pkgconfig/: musdoom.pc.in
src/: doom_music.h  libmusdoom.c  libmusdoom.h  memio.c  memio.h  midifile.c  midifile.h  mus2mid.c  mus2mid.h  mus_player.c  opl3.h
src/internal/: types.h
tests/: CMakeLists.txt  test_api.c
tools/: wadextract.c
